Update minecraft.sh