@@ -52,10 +52,10 @@ touch banned-players.json
 touch banned-ips.json
 touch ops.json
 
-heap=${HEAP:-"1024M"}
+heap=${HEAP:-"1G"}
 
 echo "Iniciando: minecraft ${mc_port}"
-java -Xmx${heap} -Xms${heap} -Xss512k -XX:+UseCompressedOops -jar server.jar nogui &
+java -Xmx${heap} -Xms${heap} -Xss512k -XX:+UseConcMarkSweepGC -jar server.jar nogui &
 java_pid=$!
 
 # trap "kill $ngrok_pid $java_pid" SIGTERM
